--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="home" id="home">
 
         <div class="content">
-            <h3>get the <br> new songs</h3>
+            <h3>get the <br> NEW SONGS</h3>
             <a href="#" class="btn">show more</a>
         </div>
 
